--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-/* .container {
+.container {
   padding: 0 2rem;
 }
 
@@ -126,6 +126,4 @@
   .logo img {
     filter: invert(1);
   }
-} */
-
-/* Path: styles/Home.module.css */
+}
