Complete how-it-work page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+.sub-title {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -13,12 +23,12 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
+} */
 
 * {
   box-sizing: border-box;
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -27,4 +37,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
